--- a/Views/Chart/RemoteData.cshtml
+++ b/Views/Chart/RemoteData.cshtml
@@ -46,7 +46,7 @@
 </div>
     <script>
         var dataManager = new ej.data.DataManager({
-            url: 'https://ej2services.syncfusion.com/production/web-services/api/orders'
+            url: 'https://services.syncfusion.com/aspnet/production/api/orders'
         });
 
         var query = new ej.data.Query().take(5);
