--- a/Views/Grid/GridOverview.cshtml
+++ b/Views/Grid/GridOverview.cshtml
@@ -45,7 +45,7 @@
     </script>
 
     <script type="text/javascript">
-        var hostUrl = 'https://ej2services.syncfusion.com/production/web-services/';
+        var hostUrl = 'https://services.syncfusion.com/aspnet/production/';
         var urlapi = new ej.data.DataManager({
             url: hostUrl + "api/UrlDataSource",
             adaptor: new ej.data.UrlAdaptor()
