--- a/Views/RichTextEditor/ExportWord.cshtml
+++ b/Views/RichTextEditor/ExportWord.cshtml
@@ -13,7 +13,7 @@
     </style>
     <script type="text/javascript">
         var rteObj;
-        var hostUrl = "https://ej2services.syncfusion.com/production/web-services/";
+        var hostUrl = "https://services.syncfusion.com/aspnet/production/";
         function created() {
             rteObj = this;
             var exportDoc = rteObj.element.querySelector('#custom_tbarbtn_2');
