--- a/Views/Grid/FilterMenu.cshtml
+++ b/Views/Grid/FilterMenu.cshtml
@@ -71,7 +71,7 @@
             }
         }
         function load(args) {
-            var hostUrl = 'https://ej2services.syncfusion.com/production/web-services/';
+            var hostUrl = 'https://services.syncfusion.com/aspnet/production/';
             var urlapi = new ej.data.DataManager({
                 url: hostUrl + "api/UrlDataSource",
                 adaptor: new ej.data.UrlAdaptor()
