--- a/Views/PdfViewer/DocumentList.cshtml
+++ b/Views/PdfViewer/DocumentList.cshtml
@@ -164,7 +164,7 @@
                     'FormDesignerEditTool', 'FreeTextAnnotationOption', 'InkAnnotationOption',
                     'ShapeAnnotationOption', 'StampAnnotation', 'SignatureOption', 'SearchOption',
                     'PrintOption', 'DownloadOption'],
-                annotationToolbarItems: ['HighlightTool', 'UnderlineTool', 'StrikethroughTool',
+                annotationToolbarItems: ['HighlightTool', 'UnderlineTool', 'StrikethroughTool', 'SquigglyTool',
                     'ColorEditTool', 'OpacityEditTool', 'AnnotationDeleteTool', 'StampAnnotationTool',
                     'HandWrittenSignatureTool', 'InkAnnotationTool', 'ShapeTool', 'CalibrateTool',
                     'StrokeColorEditTool', 'ThicknessEditTool', 'FreeTextAnnotationTool', 'FontFamilyAnnotationTool',
