--- a/Views/RichTextEditor/BottomToolbar.cshtml
+++ b/Views/RichTextEditor/BottomToolbar.cshtml
@@ -105,6 +105,9 @@
         bottom: 57px;
         right: 60px;
     }
+    .chat-section {
+        height: 600px;
+    }
     
 </style>
 <script>
